# sprint_2_HostelHub

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  kill-port.ps1  start-dev.bat  start-dev.sh  supabase_seed.sql
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  cargo_check_error.txt  compile_errors.txt  compile_errors_utf8.txt  reset_db.sql
backend/src/: db.rs  main.rs  models.rs  routes.rs  seed.rs
backend/src/auth/: handlers.rs  middleware.rs  service.rs
backend/src/handlers/: complaints.rs  dashboard.rs  fee.rs  fees.rs  hostel.rs  maintenance.rs  mod.rs  notices.rs  room.rs  rooms.rs  students.rs  visitor.rs
backend/target_cli/: .rustc_info.json
backend/target_cli/debug/.fingerprint/autocfg-4a4e01d500b12a33/: lib-autocfg  lib-autocfg.json
backend/target_cli/debug/.fingerprint/bytes-cc0a20647e53726a/: lib-bytes  lib-bytes.json
backend/target_cli/debug/.fingerprint/cc-b3bf133f859d1618/: lib-cc  lib-cc.json
backend/target_cli/debug/.fingerprint/cfg-if-958b7eb6cae6936d/: lib-cfg_if  lib-cfg_if.json
backend/target_cli/debug/.fingerprint/find-msvc-tools-526db89c667947b5/: lib-find_msvc_tools  lib-find_msvc_tools.json
backend/target_cli/debug/.fingerprint/futures-core-85d3f87fb4b487db/: lib-futures_core  lib-futures_core.json
backend/target_cli/debug/.fingerprint/generic-array-85611c5372e1d801/: run-build-script-build-script-build  run-build-script-build-script-build.json
backend/target_cli/debug/.fingerprint/generic-array-858b1669dfd40181/: lib-generic_array  lib-generic_array.json
frontend/: Dockerfile  (+5 more)
(+157 files in other folders)
